--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"static-module": "^1.1.2",
 		"quote-stream": "^0.0.0",
 		"resolve": "^1.1.6",
-		"jade": "^1.9.2"
+		"jade": "^1.9.2",
+		"through2": "^0.6.3",
+		"object-assign": "^2.0.0"
 	},
 	"author": "Thomas Jensen <thomas@paylike.io> (https://paylike.io)",
 	"license": "MIT"
